assets/scss/app.scss
@import "helpers";
@import "modals/3d.scss";
@import "yandexMap/yandex.scss";
@import "modals/geoModal.scss";

@font-face {
  font-family: Museo Sans Cyrl;
  font-weight: 100;
  src: url("../../static/fonts/MuseoSansCyrl-100.otf");
  font-style: normal;
}

@font-face {
  font-family: Museo Sans Cyrl;
  font-weight: 300;
  src: url("../../static/fonts/MuseoSansCyrl-300.otf");
  font-style: normal;
}

@font-face {
  font-family: Museo Sans Cyrl;
  font-weight: 500;
  src: url("../../static/fonts/MuseoSansCyrl-500.otf");
  font-style: normal;
}

@font-face {
  font-family: Museo Sans Cyrl;
  font-weight: 700;
  src: url("../../static/fonts/MuseoSansCyrl-700.otf");
  font-style: normal;
}

@font-face {
  font-family: Museo Sans Cyrl;
  font-weight: 900;
  src: url("../../static/fonts/MuseoSansCyrl-900.otf");
  font-style: normal;
}

@font-face {
  font-family: Muller;
  src: url("../../static/fonts/MullerMedium.ttf");
  font-style: normal;
}

html,
body,
#__nuxt,
#__layout,
#content {
  box-sizing: border-box;
  background: #fafafa;
  font-family: Museo Sans Cyrl;
  height: 100%;
  width: 100%;
}

a {
  text-decoration: none;
  outline: none;

  &:hover {
    text-decoration: none;
  }
}

input {
  &::-ms-clear {
    display: none;
  }
}

*,
*:before,
*:after {
  box-sizing: border-box;
  margin: 0;
}

@mixin flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

@mixin see-all {
  text-decoration: none;
  color: #228596;
  font-size: 16px;
  font-weight: 300;
  line-height: 130%;
  display: flex;
  align-items: center;
  transition: color 0.2s ease;

  span {
    margin-right: 5px;
  }

  &:hover {
    color: #9ea6ae;

    &:after {
      background: url("../../static/pics/global/svg/arrow_next_gray.svg");
    }
  }

  &:after {
    content: "";
    display: block;
    vertical-align: middle;
    width: 6px;
    height: 8px;
    padding-left: 5px;
    background: url("../../static/pics/global/svg/arrow_next_orange.svg");
  }
}

@mixin bg-dark-fixed {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, .5);
}

.hidden {
  display: none !important;
}

.h-line {
  width: 100%;
  height: 1px;
  background: #e8e8e8;
}

.orange {
  color: #FF8C00 !important;
}

.bg {
  &-orange {
    background-color: #FF8C00 !important;
  }

  &-blue {
    background-color: #228596 !important;
  }
}

.capitalize {
  text-transform: capitalize;
}

.custom-container,
.custom-grid-container {
  position: relative;
  max-width: 1440px;
  margin: 0 auto;
}

.custom-container {
  padding-left: 74px;
  padding-right: 74px;

  &-inner {
    position: relative;
  }
}

.custom-grid-container {
  padding-left: 64px;
  padding-right: 64px;
}

.custom-page {
  padding-top: 130px;

  &__title {
    color: #393e48;
    font-weight: 700;
    font-size: 36px;
    line-height: 120%;
  }
}

.custom-checkbox {
  font-size: 14px;
  line-height: 100%;
  color: #242934;
  display: flex;
  align-items: flex-start;
  cursor: pointer;

  &__checkbox {
    @include flex-center;
    border: 1px solid #c4c4c4;
    border-radius: 3px;
    min-width: 13px;
    min-height: 13px;
    max-width: 13px;
    max-height: 13px;
    margin-right: 10px;

    &.checked {
      background: #FF8C00;
      border: 1px solid #FF8C00;
    }

    img {
      width: 9px;
      height: 7px;
    }
  }
}

.custom-new-select {
  font-size: 14px;
  line-height: 120%;
  color: #000000;
  border: none;
  width: 100%;
  min-width: 90px;
  height: fit-content;
  position: relative;

  input {
    padding: 0;
    border: none;
    width: 100%;
    min-width: unset;
    white-space: normal;

    &.not-default {
      &::placeholder {
        color: black;
      }
    }
  }

  &.default {
    color: #73767d;

    .custom-new-select {
      &__top, &__bottom {
        border-color: #C4C4C4;
      }
    }
  }

  &.open {
    .custom-new-select {
      &__top {
        border-radius: 6px 6px 0 0;

        img {
          transform: rotate(180deg);
        }
      }
    }
  }

  &__top {
    padding: 16px;
    padding-left: 20px;
    border: 1px solid #228596;
    border-radius: 6px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;

    img {
      width: 12px;
      height: 12px;
      transition: transform .2s ease;
    }
  }

  &__bottom {
    position: absolute;
    bottom: 0;
    transform: translateY(100%);
    background: white;
    border: 1px solid #228596;
    border-top: none;
    border-radius: 0 0 6px 6px;
    width: 100%;
    z-index: 1;
    cursor: pointer;
    padding: 5px 0;
    max-height: 200px;
    overflow-y: auto;

    &__item {
      padding: 5px 20px;

      &:hover {
        background: #228596;
        color: white;
      }
    }
  }
}

.pagination {
  button {
    padding: 0;
    background: none;
    border: none;
    display: flex;
    align-items: center;
    font-size: 16px;
    line-height: 130%;
    margin: 0 15px;
    color: #151B20;

    &:focus {
      outline: none;
    }
  }

  &__button {
    opacity: .7;

    &.current {
      opacity: 1;
    }
  }
}

.two-part-layout {
  display: flex;

  &__left {
    max-width: 66%;
    width: 100%;
  }

  &__right {
    width: 100%;
    max-width: 34%;
    padding-left: 24px;
  }

  &__card {
    padding: 35px;
    border-radius: 12px;
    background: white;
    margin-bottom: 15px;

    &:last-of-type {
      margin-bottom: 0;
    }

    &__title {
      font-size: 36px;
      font-weight: 700;
      line-height: 43px;
      color: #393e48;
      margin-bottom: 0;
    }
  }
}
/* ... */

